extends CanvasLayer

@onready var score: Label = $Label2

# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	if GameManager.Dead:
		visible = true
	
	score.text = str(GameManager.Score)


func _on_retry_pressed() -> void:
	GameManager.restartGame()


func _on_quit_to_menu_pressed() -> void:
	get_tree().change_scene_to_file("res://scenes/menu.tscn")
	GameManager.restartGame()


func _on_quit_game_pressed() -> void:
	get_tree().quit()
